Fix colors in dark mode

--- a/components/categoriesList/style.module.css
+++ b/components/categoriesList/style.module.css
@@ -4,8 +4,17 @@
   width: fit-content;
   display: inline-block;
 }
+
+:global(.dark) .cardOuter:hover{
+
+background-color:rgb(25, 28, 31) !important;
+
+}
+
 .cardOuter:hover{
+
 background-color:lightgray !important;
+
 }
 
 .cardInner {
